--- a/src/assets/scss/layout/_main.scss
+++ b/src/assets/scss/layout/_main.scss
@@ -38,6 +38,10 @@
 				margin-left: 1em;
 				display: block;
 			}
+			.sectionTitle{
+				font-size: 1.2em!important;
+				letter-spacing:0;
+			}
 
 			&.timeout {
 				display: none;
