--- a/src/assets/scss/layout/_main.scss
+++ b/src/assets/scss/layout/_main.scss
@@ -42,6 +42,10 @@
 				font-size: 1.2em!important;
 				letter-spacing:0;
 			}
+			.inyerface{
+				margin-bottom: 10rem;
+				display: block;
+			}
 
 			&.timeout {
 				display: none;
